Thu May 08 01:24:53 BST 2003  Olly Betts <olly@survex.com>

	* api/ompostlistiterator.cc,docs/overview.html,tests/api_db.cc:
	  Fixed OmWeight and OmMatchDecider in comments, docs, and
	  testsuite.

Thu May 08 01:16:30 BST 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc,backends/multi/multi_postlist.h,common/,
	  include/om/om.h,include/xapian/enquire.h,matcher/,
	  net/socketclient.cc,net/socketserver.cc: OmMatchDecider ->
	  Xapian::MatchDecider; OmWeight -> Xapian::Weight; BoolWeight,
	  TradWeight, BM25Weight -> Xapian::.

Wed May 07 23:06:47 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/btreetest.cc,backends/quartz/quartztest.cc,
	  configure.in,netprogs/nettest.cc,tests/,testsuite/: Minor overhaul
	  of testsuite.

Wed May 07 17:54:34 BST 2003  Olly Betts <olly@survex.com>

	* backends/,common/document.h,matcher/Makefile.am,matcher/document.cc:
	  Removed do_ wrappers for Document methods get_value(),
	  get_all_values() and get_data().  The wrappers used to perform
	  thread locking, but now they're just pointless overhead.

Wed May 07 17:24:00 BST 2003  Olly Betts <olly@survex.com>

	* HACKING: Started section of API structure.

Wed May 07 02:16:03 BST 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/expand.h,common/omenquireinternal.h,
	  common/omstringstream.h,docs/quickstart.html,include/om/om.h,
	  include/xapian/enquire.h,include/xapian/output.h,matcher/expand.cc,
	  matcher/multimatch.cc,net/socketcommon.cc,netprogs/nettest.cc,
	  tests/api_db.cc,testsuite/testutils.cc: OmMSet -> Xapian::MSet,
	  similarly for OmMSetIterator, OmESet, and OmESetIterator.

Tue May 06 19:31:42 BST 2003  Olly Betts <olly@survex.com>

	* include/xapian/query.h: New file I failed to checkin on Friday.

Tue May 06 14:16:41 BST 2003  Olly Betts <olly@survex.com>

	* HACKING,configure.in,tests/.cvsignore,tests/Makefile.am,
	  tests/runtest.in,testsuite/testsuite.cc: Sorted out autodetection
	  of valgrind for running testsuite.